fixed overlap

--- a/static/css/exercise.css
+++ b/static/css/exercise.css
@@ -1,4 +1,5 @@
 .exercise-container {
+    position: relative;
     display: flex;
     flex-direction: column;
     margin: 100px 20px 20px;
